[package]
name = "bt_http_server"
version = "0.2.12"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Start Application Server (HTTP Service)"

[dependencies]
axum = "0.8.9"
bt_core_config = { git = "https://github.com/bachuetech/bt_core_config.git", branch = "master", version = "0.3.4" }
bt_logger = "0.5.0"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = ["full"] }
